--- a/ConstraintLayout/app/src/main/res/layout/activity_main.xml
+++ b/ConstraintLayout/app/src/main/res/layout/activity_main.xml
@@ -4,15 +4,31 @@
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
-	tools:context=".MainActivity">
+	tools:context=".MainActivity"
+	app:layout_constraintGuide_percent="0.5" >
 
-	<TextView
+	<androidx.constraintlayout.widget.Guideline
+		android:id="@+id/guideline3"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:text="Hello World!"
-		app:layout_constraintBottom_toBottomOf="parent"
+		android:orientation="horizontal"
+		app:layout_constraintGuide_percent="0.5" />
+
+	<LinearLayout
+		android:layout_width="0dp"
+		android:layout_height="0dp"
+		android:background="@color/colorAccent"
 		app:layout_constraintLeft_toLeftOf="parent"
 		app:layout_constraintRight_toRightOf="parent"
-		app:layout_constraintTop_toTopOf="parent" />
+		app:layout_constraintTop_toTopOf="parent"
+		app:layout_constraintBottom_toTopOf="@+id/guideline3"/>
 
+	<LinearLayout
+		android:layout_width="0dp"
+		android:layout_height="0dp"
+		android:background="#FFFFFF"
+		app:layout_constraintLeft_toLeftOf="parent"
+		app:layout_constraintRight_toRightOf="parent"
+		app:layout_constraintBottom_toBottomOf="parent"
+		app:layout_constraintTop_toBottomOf="@+id/guideline3"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
