--- a/RelativeLayout/app/src/main/res/layout/activity_main.xml
+++ b/RelativeLayout/app/src/main/res/layout/activity_main.xml
@@ -13,17 +13,33 @@
 		android:layout_height="wrap_content"
 		android:layout_alignParentStart="true"
 		android:layout_alignParentTop="true"
-		android:layout_marginStart="16dp"
-		android:layout_marginTop="17dp"
-		android:text="Button" />
+		android:layout_alignParentEnd="true"
+		android:text="Top" />
 
 	<Button
 		android:id="@+id/button2"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		android:layout_alignParentTop="true"
 		android:layout_alignParentStart="true"
-		android:layout_marginStart="64dp"
-		android:layout_marginTop="144dp"
-		android:text="Button" />
+		android:layout_alignParentBottom="true"
+		android:layout_alignParentEnd="true"
+		android:text="Bottom" />
+
+	<Button
+		android:id="@+id/button3"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:text="Left below top"
+		android:layout_alignParentStart="true"
+		android:layout_alignParentLeft="true"
+		android:layout_below="@id/button"/>
+
+	<Button
+		android:id="@+id/button4"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_above="@id/button2"
+		android:layout_alignParentEnd="true"
+		android:layout_alignParentRight="true"
+		android:text="right above bottom" />
 </RelativeLayout>
